--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ ul.nav a:hover {
   color: #EEE !important;
 }
 #main {
-  border-top: solid 3px #E43136;
+  border-top: solid 3px #e81e48;
 }
 #section1 {
   height: 500px;
@@ -21,14 +21,14 @@ ul.nav a:hover {
 }
 #section2 {
   height: 300px;
-  background-color: #3C948B;
+  background-color: #01dea1;
   position: relative;
 }
 #section2::before {
   content: "";
   height: 20px;
   top:-20px;
-  background-color: #3C948B;
+  background-color: rgba(1,222,161,0.6);
   opacity: 0.4;
   position: absolute;
   width: 100%;
@@ -37,7 +37,7 @@ ul.nav a:hover {
 #section2::after {
   content: "";
   height: 20px;
-  background-color: #3C948B;
+  background-color: rgba(1,222,161,0.6);
   opacity: 0.4;
   width: 100%;
   left: 0;
@@ -88,7 +88,7 @@ ul.nav a:hover {
   width: 100%;
   top: 0;
   bottom: 0;
-  border-top: solid 2px whitesmoke;
+  border-top: solid 2px #01dea1;
   text-align: center;
 }
 span#null {
@@ -136,4 +136,66 @@ span#null {
   color: black;
   border: solid 1px black;
   border-radius: 2px;
+}
+
+/*Events page */
+#topbarWrapper {
+  background-color: #4B585E;
+}
+#topbarInner {
+  padding: 5px;
+  color: whitesmoke;
+  margin: 0 !important;
+}
+#topbarInner input{
+  border: none;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.54);
+  padding-left: 30px;
+}
+.inputIcon {
+  position: absolute;
+  top: 10px;
+  width: 34px;
+  text-align: center;
+  pointer-events: none;
+}
+#topbarInner #toggleSidebar {
+  cursor: pointer;
+  pointer-events: all;
+}
+#sidebar {
+  height: 100%;
+  background-color: #E5E5E6;
+  width: 16.66666667%;
+  position: fixed;
+  padding: 10px 0 0 0;
+}
+#sidebar a.btn {
+  color: whitesmoke;
+  background-color: #49BA9C;
+  padding: 8px;
+  border: none;
+  border-radius: 3px;
+  width: 80%;
+  font-weight: 600;
+  font-size: larger;
+}
+#sidebar ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+#sidebar li {
+  line-height: 35px;
+  font-size: large;
+  padding-left: 25px;
+}
+#sidebar li.iDisabled {
+  color: grey;
+  margin-top: 20px;
+}
+#sidebar li.active {
+  border-left: 5px solid #49BA9C;
+  color: #49BA9C;
+  padding-left: 20px;
 }
